--- a/app/index.jade
+++ b/app/index.jade
@@ -8,7 +8,7 @@ html
     link(rel="stylesheet" type="text/css" href="styles/index.css")
     link(rel="stylesheet" type="text/css" href="styles/register.css")
     link(rel="stylesheet" type="text/css" href="styles/login.css")
-    link(rel="stylesheet" type="text/css" href="style/home.css")
+    link(rel="stylesheet" type="text/css" href="styles/home.css")
     link(rel="stylesheet" type="text/css" href="styles/appraise.css")
     script(src="/jspm_packages/system.js")
     script(src="config.js")
