--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -18,7 +18,7 @@
         label group3
   .ten.wide.column
     span
-    .ui.primary.button() 添加评价
+     a.ui.primary.button(href="/#/add") 添加评价
 
     span
     table.ui.table
