--- a/app/views/add-appraise.jade
+++ b/app/views/add-appraise.jade
@@ -45,4 +45,4 @@
               i.inverted.search.icon
           td
             .ui.primary.button(ng-click="vm.add_appraise(trainee.appraise, trainee)") 添加
-    .ui.primary.button(ng-click="vm.add_appraise(trainee.appraise, trainee)") 全部添加
+    .ui.primary.button(ng-click="vm.add_appraises(vm.trainees)") 全部添加
