--- a/app/views/add-appraise.jade
+++ b/app/views/add-appraise.jade
@@ -2,7 +2,7 @@
   .two.wide.column
   .eleven.wide.column
     span Hi，
-    span#current-user {{vm.userName}}
+    span#current-user {{vm.trainerName}}
     span 欢迎来到 Muggles 考评系统
   .three.wide.column
     a(ng-click="vm.logout()")#logout 注销
