--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -10,44 +10,51 @@
         label group3
   .ten.wide.column
     span
-     a.ui.primary.button(href="/#/add") 添加评价
+     a.ui.primary.button(href="/#/add_date_appraise") 添加单日评价
+    span
+     a.ui.primary.button(href="/#/add_week_appraise") 添加周评价
+    span
+     a.ui.primary.button(href="/#/add_month_appraise") 添加月评价
+    span
+      a.ui.primary.button(href="/#/add_season_appraise") 添加季评价
+
 
     span
-    table.ui.table
-      thead
-        tr
-          th
-            span 姓名
-          //th
-          //  span 评价类型
-          //th
-          //  span 评价日期
-          //th
-          //  span 评价等级
-          //th
-          //  span 评语
-          //th
-          //  span 确认添加
-          th
-            span 以往评价
-      tbody
-        tr(ng-repeat="trainee in vm.trainees")
-          td
-            span {{trainee.username}}
-          //td
-          //  select.ui.dropdown(ng-model="trainee.appraise.type" ng-change="vm.type_change(trainee.appraise.type)")
-          //    option(ng-repeat="type in vm.types" value="{{type.value}}") {{type.name}}
-          //td
-          //  input(type="month" placeholder="2015-5-10" required ng-model="trainee.appraise.date")
-          //td
-          //  select.ui.dropdown(ng-model="trainee.appraise.level")
-          //    option(ng-repeat="level in vm.levels" value=level) {{level}}
-          //td
-          //  .ui.icon.input
-          //    input(type="text" placeholder="请输入评语..." ng-model='trainee.appraise.comment')
-          //    i.inverted.search.icon
-          //td
-          //  .ui.primary.button(ng-click="vm.add_appraise({type: trainee.appraise.type, level: trainee.appraise.level, comment: trainee.appraise.comment, group: trainee.current_group}, trainee)") 确认添加
-          td
-            .ui.primary.button 查看以往评价
+      table.ui.table
+        thead
+          tr
+            th
+              span 姓名
+            //th
+            //  span 评价类型
+            //th
+            //  span 评价日期
+            //th
+            //  span 评价等级
+            //th
+            //  span 评语
+            //th
+            //  span 确认添加
+            th
+              span 以往评价
+        tbody
+          tr(ng-repeat="trainee in vm.trainees")
+            td
+              span {{trainee.username}}
+            //td
+            //  select.ui.dropdown(ng-model="trainee.appraise.type" ng-change="vm.type_change(trainee.appraise.type)")
+            //    option(ng-repeat="type in vm.types" value="{{type.value}}") {{type.name}}
+            //td
+            //  input(type="month" placeholder="2015-5-10" required ng-model="trainee.appraise.date")
+            //td
+            //  select.ui.dropdown(ng-model="trainee.appraise.level")
+            //    option(ng-repeat="level in vm.levels" value=level) {{level}}
+            //td
+            //  .ui.icon.input
+            //    input(type="text" placeholder="请输入评语..." ng-model='trainee.appraise.comment')
+            //    i.inverted.search.icon
+            //td
+            //  .ui.primary.button(ng-click="vm.add_appraise({type: trainee.appraise.type, level: trainee.appraise.level, comment: trainee.appraise.comment, group: trainee.current_group}, trainee)") 确认添加
+            td
+              .ui.primary.button 查看以往评价
 
