--- a/app/views/add-date-appraise.jade
+++ b/app/views/add-date-appraise.jade
@@ -8,14 +8,14 @@
         label group2
       a.item
         label group3
-  .two.wide.column
-    span 选择日期:
-      input(type="date" placeholder="yyyy-MM-dd" ng-model="vm.date" required)
   .ten.wide.column
-    .ui.red.message(ng-show="vm.is_add_error") {{vm.add_error}}
-    .ui.green.message(ng-show="vm.is_add_success") {{vm.add_success}}
-  .two.wide.column
-  .twelve.wide.column
+    .ui.grid
+      .six.wide.column
+        span 选择日期:
+          input(type="date" placeholder="yyyy-MM-dd" ng-model="vm.date" required)
+      .ten.wide.column
+        .ui.red.message(ng-show="vm.is_add_error") {{vm.add_error}}
+        .ui.green.message(ng-show="vm.is_add_success") {{vm.add_success}}
     table.ui.table
       thead
         tr
