--- a/app/views/appraise.jade
+++ b/app/views/appraise.jade
@@ -107,3 +107,14 @@
             span {{appraise.group.name}}
           td
             span {{appraise.appraised_date}}
+.ui.modal#rewrite-appraise(ng-show="vm.rewrite_appraise_modal_signal")
+  i.close.icon
+  .header 重新评论
+  .content
+    .description 您已发表评论，是否继续？
+  .actions
+    .two.fluid.ui.inverted.buttons
+      .ui.red.basic.inverted.button
+        i.remove.icon No
+      .ui.green.basic.inverted.button
+        i.checkmark.icon Yes
