--- a/app/views/appraise.jade
+++ b/app/views/appraise.jade
@@ -3,8 +3,8 @@
     h2.ui.inverted.header.black Trainer考评页
   .ten.wide.column
     .ui.content#message(ng-show="vm.rewrite_appraise_signal") 您已对该生发表评论，修改评论点击【确认】，否则点击【取消】
-      .positive.ui.button(ng-click="vm.rewrite_appraise()") 确认
-      .negative.ui.button(ng-click="vm.cancel_appraise()") 取消
+      .positive.ui.button(ng-click="vm.submit_rewrite_appraise(vm.appraise)") 确认
+      .negative.ui.button(ng-click="vm.cancel_rewrite_appraise()") 取消
   .sixteen.wide.column &nbsp;
   .sixteen.wide.column
     span 组别：
