--- a/app/styles/appraise.less
+++ b/app/styles/appraise.less
@@ -7,6 +7,12 @@ span {
   margin-right: 20px;
 }
 
+#success-message {
+  padding-left: 300px;
+  font-size: 20px;
+  color: #4647BA;
+}
+
 .center-display {
   height: 38px;
   line-height: 38px;
@@ -20,3 +26,5 @@ a.title.can-click-step {
 a.title.can-click-step:hover {
   cursor: pointer;
 }
+
+
