--- a/app/views/add-date-appraise.jade
+++ b/app/views/add-date-appraise.jade
@@ -27,6 +27,9 @@
             span 评语
           th
             span 添加
+          th
+            input(type="checkbox" name="all" ng-model="vm.check_all" ng-click="vm.select_all(vm.check_all)")
+            label 全选
       tbody
         tr(ng-repeat="trainee in vm.trainees")
           td
@@ -40,18 +43,7 @@
               i.inverted.search.icon
           td
             .ui.primary.button(ng-click="vm.add_date_appraise(trainee.appraise, trainee, vm.date)") 添加
+          td
+              input(type="checkbox" ng-model="trainee.checked" ng-click="vm.select_trainee(trainee.checked, trainees)")
 
     .ui.primary.button(ng-click="vm.add_date_appraises(vm.trainees, vm.date)") 全部添加
-   //ui.dimmer.modals.page.transition.visible.active#modal1
-  //  .ui.fullscreen.modal.transition.visible.active.scrolling
-  //    i.close.icon
-  //    .header 填写评价
-  //    .content
-  //      .ui.form
-  //        h4.ui.dividing.header 请填写该学生的评价理由
-  //        .field
-  //          label 评价详情
-  //          textarea
-  //    .actions
-  //      .ui.button 取消
-  //      .ui.green.button 确定
