--- a/app/views/add-date-appraise.jade
+++ b/app/views/add-date-appraise.jade
@@ -13,6 +13,7 @@
       .six.wide.column
         span 选择日期:
           input(type="date" placeholder="yyyy-MM-dd" ng-model="vm.date" required)
+        i.asterisk.icon.red
       .ten.wide.column
         .ui.red.message(ng-show="vm.is_add_error") {{vm.add_error}}
         .ui.green.message(ng-show="vm.is_add_success") {{vm.add_success}}
@@ -37,6 +38,7 @@
           td
             select.ui.dropdown(ng-model="trainee.appraise.level" ng-options="level for level in vm.levels")
               option(value="") 请选择...
+            i.asterisk.icon.red
           td
             .ui.icon.input
               textarea(type="text" placeholder="请输入评语..." ng-model="trainee.appraise.comment")
