--- a/app/views/appraise.jade
+++ b/app/views/appraise.jade
@@ -9,15 +9,14 @@
   .sixteen.wide.column
     span 组别：
       select.ui.dropdown(ng-model="vm.appraise.group" ng-options="group.name for group in vm.groups" required)
-        option(value="") 请选择...
+        //option(value="") 请选择...
     span 评价类型：
       select.ui.dropdown(ng-model="vm.appraise.type" ng-options="type for type in vm.types" required)
-        option(value="") 请选择...
+        //option(value="") 请选择...
     span 评价等级：
       select.ui.dropdown(ng-model="vm.appraise.level" ng-options="level for level in vm.levels" required)
-        option(value="") 请选择...
     span#date.center-display 选择日期：
-      input(type="date" placeholder="2015-5-10" ng-model="vm.appraise.appraised_date" required)
+        input(type="date" placeholder="2015-5-10" ng-model="vm.appraise.appraised_date" required)
     span.center-display 填写评语：
       .ui.icon.input
         textarea(rows="2" cols="20" type="text" placeholder="请输入评语..." ng-model="vm.appraise.comment")
