modify layout in jade page

--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -1,4 +1,5 @@
 .ui.grid#home-grid(ng-controller="homeController")
+  .sixteen.wide.column
   .one.wide.column
   .three.wide.column#group-menu-column
     .ui.wide.vertical.menu
