--- a/app/views/add-date-appraise.jade
+++ b/app/views/add-date-appraise.jade
@@ -12,7 +12,7 @@
     .ui.grid
       .six.wide.column
         span 选择日期:
-          input(type="date" placeholder="yyyy-MM-dd" ng-model="vm.date" required ng-change="vm.date_change()")
+          input(type="date" placeholder="yyyy-MM-dd" ng-model="vm.date" required ng-change="vm.date_change(vm.check_all)")
         i.asterisk.icon.red
       .ten.wide.column
         .ui.red.message(ng-show="vm.is_add_error") {{vm.add_error}}
