--- a/app/views/add-date-appraise.jade
+++ b/app/views/add-date-appraise.jade
@@ -25,7 +25,7 @@
           th
             span 添加
           th
-            input(type="checkbox" name="all" ng-model="vm.check_all" ng-click="vm.select_all(vm.check_all)")
+            input(type="checkbox" name="all" ng-model="vm.check_all" ng-click="vm.select_all(vm.check_all, vm.trainees)")
             label 全选
       tbody
         tr(ng-repeat="trainee in vm.trainees")
@@ -41,6 +41,7 @@
           td
             .ui.primary.button(ng-click="vm.add_date_appraise(trainee.appraise, trainee, vm.date)") 添加
           td
-              input(type="checkbox" ng-model="trainee.checked" ng-disabled="{{trainee.disable}}" ng-click="vm.select_trainee(trainee.checked, trainees)")
+              input(type="checkbox" ng-model="trainee.checked" ng-disabled="trainee.disable" ng-click="vm.select_trainee(trainee.checked, trainees)")
               span {{trainee.tip}}
     .ui.primary.button(ng-click="vm.add_date_appraises(vm.trainees, vm.date)") 全部添加
+
